<resources>
    <string name="app_name" translatable="false">V2EX+</string>

    <string name="action_settings">Settings</string>

    <string name="desc_avatar">Avatar</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_refresh">Refresh</string>

    <string name="desc_topic_link">Topic link</string>
    <string name="toast_copied">Copied to clipboard</string>
    <string name="drawer_explore">Explore</string>
    <string name="title_fragment_nodes">Nodes</string>
    <string name="title_fragment_topics">Topics</string>
    <string name="action_reply">Reply</string>
    <string name="desc_add_reply">Add a reply</string>
    <string name="toast_sending">Sending…</string>
    <string name="action_cancel">Cancel</string>
    <string name="toast_cancel_failed">Cancellation failed!</string>
    <string name="action_search">Search</string>
    <string name="desc_author">Author</string>
    
    <string name="menu_title_comment">Comment options</string>
    <string name="menu_action_thank">Like</string>
    <string name="menu_action_reply">Reply</string>
    <string name="menu_action_ignore">Ignore</string>
    <string name="menu_action_copy">Copy</string>

    <string name="desc_open_drawer">Open navigation drawer</string>
    <string name="desc_close_drawer">Close navigation drawer</string>
    <string name="drawer_notifications">Notifications</string>
    <string name="drawer_unread_notifications">Unread</string>
    <string name="action_thank">Thank</string>
    <string name="action_ignore">Ignore</string>
    <string name="action_share">Share</string>
    <string name="tv_daily_bonus">Daily Bonus</string>
    <string name="toast_daily_award_received">Received daily bonus</string>
    <string name="toast_need_sign_in">Please sign in</string>
    <string name="toast_access_restricted">Access restricted! Please verify your phone on website.</string>
    <string name="toast_connection_exception">Cannot connect to server…</string>
    <string name="toast_remote_exception">Server returned an error, please try again later.</string>
    <string name="toast_topic_not_found">Topic not found</string>
    <string name="toast_node_not_found">Node not found</string>
    <string name="toast_access_denied">Access denied, please try again later.</string>
    <string name="toast_parse_failed">Parse failed</string>
    <string name="toast_unknown_error">Unknown error</string>
    <string name="pref_title_always_load_image">Always load images</string>
    <string name="pref_summary_load_image_on_mobile_network">Load images in topic/comment while using mobile network</string>
    <string name="toast_has_sign_out">Signed out!</string>
    <string name="title_fragment_notifications">Notifications</string>
    <string name="toast_jump_to_last_read_pos">Return to last read position</string>
    <string name="label_loading">Loading…</string>
    <string name="label_no_comments">No comments yet</string>
    <string name="label_no_more_comments">No more comments</string>
    <string name="label_failed_with_retry">Load failed, click to retry</string>

    <string name="notification_unknown">Unknown action</string>
    <string name="notification_reply_topic">replied your topic</string>
    <string name="notification_thank_topic">liked your topic</string>
    <string name="notification_fav_topic">added your topic to favourites</string>
    <string name="notification_reply_comment">replied your comment</string>
    <string name="notification_thank_comment">liked your comment</string>
    
    <string name="ntf_title_new_notifications">New notifications</string>
    <string name="ntf_title_app_update">Update</string>
    <string name="ntf_desc_from_v2ex">From V2EX</string>
    <string name="ntf_desc_new_version_of_app">V2EX+ has released a new version</string>
    <string name="drawer_about">About</string>
    <string name="toast_app_version">Version: %s</string>
    <string name="title_activity_loading">Loading</string>
    <string name="toast_please_wait">Please wait…</string>
    <string name="drawer_favorite" translatable="false">@string/title_fragment_favorite</string>
    <string name="title_fragment_favorite">Favorites</string>
    <string name="title_postscript">Postscripts %d</string>
    <string name="toast_topic_ignored">Topic Ignored!</string>
    <string name="action_fav">Favorite</string>
    <string name="toast_can_not_found_comments_of_the_author">Can\'t found comments of %s!</string>
    <string name="toast_register_device_failed">Device registration failed!</string>
    <string name="toast_unregister_device_failed">Failed to unregister the device!</string>

    <string name="title_new_topic">New topic</string>
    <string name="tv_selected_node"><![CDATA[Selected Node: <u>%s</u>]]></string>
    <string name="hint_topic_subject">Title</string>
    <string name="hint_topic_body">Leave it empty if the title is sufficient detailed to express your idea.</string>
    <string name="action_post">Post</string>
    <string name="toast_post_failed">Post failed</string>
    <string name="action_edit">Edit</string>
    
    <string name="title_load_topic_from_draft">Load draft</string>
    <string name="dest_load_topic_from_draft">Do you want to load from drafts?</string>
    <string name="toast_topic_saved_as_draft">Saved as a draft</string>
    <string name="action_new_topic">New topic</string>
    <string name="action_load">Load</string>
    <string name="action_discard">Discard</string>
    <string name="title_select_node">Select node</string>
    <string name="toast_activity_not_found">Unable to open the app!</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="toast_email_app_not_found">Can\'t found email app!</string>
    <string name="action_upload_image">Upload images</string>
    <string name="action_back">Back</string>
    <string name="desc_clear_query">Clear query</string>
    <string name="action_update">Update APP</string>
    
    <string name="toast_unsupported_url">Unsupported URL!</string>
</resources>
