<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    <item android:id="@+id/action_reply"
          android:title="@string/action_reply"
          android:icon="@drawable/ic_insert_comment_white_24dp"
          app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_thank"
          android:title="@string/action_thank"/>
    <item android:id="@+id/action_ignore"
          android:title="@string/action_ignore"/>
    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          app:showAsAction="ifRoom"
          app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
    <item android:id="@+id/action_copy_link"
          android:title="@string/action_link"
          app:showAsAction="never" />
</menu>