<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_explore"
            android:checked="true"
            android:icon="@drawable/ic_explore_black_24dp"
            android:title="@string/drawer_explore"
            />
        <item android:id="@+id/drawer_nodes"
              android:icon="@drawable/ic_dashboard_black_24dp"
              android:title="@string/title_fragment_nodes"/>
    </group>
    <group android:menuCategory="secondary" android:id="@+id/secondary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings"/>
    </group>
</menu>