<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:animateLayoutChanges="false"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <!-- used as border -->
    <View
        android:id="@+id/border"
        android:background="?colorAccent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_below="@id/border"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@+id/upload"
        android:layout_toLeftOf="@+id/upload"
        android:layout_height="wrap_content"
        android:hint="@string/desc_add_reply"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/content"
        tools:ignore="LabelFor"/>

    <ImageButton
        android:id="@+id/upload"
        android:layout_toStartOf="@+id/submit"
        android:layout_toLeftOf="@+id/submit"
        android:layout_alignBottom="@+id/content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_upload_image"
        android:src="@drawable/ic_image_black_24dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="36dp"
        android:layout_height="36dp"/>

    <ImageButton
        android:id="@+id/submit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_reply"
        android:src="@drawable/ic_send_black_24dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="36dp"
        android:layout_height="36dp"/>
</RelativeLayout>