<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="FrameLayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/box"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_margin="@dimen/content_spacing"
        android:elevation="@dimen/appbar_elevation"
        android:background="@drawable/radius_box" >
        <ImageButton
            android:id="@+id/action_back"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/query"
            android:layout_alignBottom="@+id/query"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/action_back"/>

        <EditText
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/action_back"
            android:layout_toRightOf="@id/action_back"
            android:layout_toStartOf="@+id/action_clear"
            android:layout_toLeftOf="@id/action_clear"
            android:background="@android:color/transparent"
            android:inputType="text"
            android:imeOptions="actionSearch"
            android:hint="@string/action_search"/>

        <ImageButton
            android:id="@+id/action_clear"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignTop="@+id/query"
            android:layout_alignBottom="@+id/query"
            android:src="@drawable/ic_close_black_24dp"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/desc_clear_query"/>
    </RelativeLayout>
</merge>